tests/invalid/Constant_Invalid_1.whiley
int X = 1 + Y
int Y = 1 + X
